syntax = "proto3";
import "Statistics.proto";

option java_package = "com.seeker.treasure.model.player";
option java_outer_classname = "Character";

message PlayerAvatar {
  string id = 1;
  string name = 2;
  CharacterStatistics statistics = 3;
  Experience experience = 4;
  PlayerClass playerClass = 5;
}

enum PlayerClass {
  NO_DEFINED = 0;
  WARRIOR = 1;
  HUNTER = 2;
  MAGE = 3;
}
